# bravobot

./: .gitignore  README.md  sensors.launch
alpha_localization/: CMakeLists.txt  README.md  package.xml
alpha_localization/config/: localization_global.yaml  localization_local.yaml
alpha_localization/launch/: localization.launch  localization_global.launch  localization_local.launch  mapping.launch  odom.launch  view_mapping.rviz
arduino/roboSysLights/: light_functions.h  roboSysLights.ino
arduino/rover_serial_ros/: Vector.h  helper_functions.h  rover.h  rover_serial_ros.ino
diff_drive/launch/: odom_calc.launch
diff_drive/nodes/: diff_drive_odometry
listener/: CMakeLists.txt  package.xml
listener/src/: listener.cpp
speaking/: CMakeLists.txt  package.xml
speaking/launch/: speaking.launch
speaking/scripts/: manager.py  states.py
speaking/src/: .sarcasm_handler.cpp.swp  sarcasm_handler.cpp
speaking/srv/: PlayVoice.srv
state_machine/: CMakeLists.txt  package.xml
state_machine/scripts/: state_machine_manager.py  states.py
talker/src/: talker.cpp
track_person/: CMakeLists.txt  package.xml
track_person/src/: track_person.cpp
warmup/: CMakeLists.txt  package.xml  robolab_map.yaml
warmup/cfg/: .SensorFusion.cfg.swp  SensorFusion.cfg
warmup/launch/: amcl_builtin.launch  gmapping.launch  hardware.launch  hector_mapping.launch  localizer.launch  offboard_test.launch  person_follow.launch  robot.launch  robotlocalization.launch  robotmapping.launch  system.launch
warmup/launch/includes/: amcl.launch.xml
warmup/maps/: 2ndfloor_firsthalf_full.yaml  robolab_map.pgm  robolab_map.yaml
warmup/msg/: LidarCone.msg
warmup/src/: Meanshift.hpp  blob_detect.cpp  calibration_server.cpp  color_detect_node.cpp  detect_person.cpp  monitor.cpp  pcl_node.cpp  person_monitor.cpp  python.py  sarcasm_handler.cpp  slic.cpp  slic.h  superpixelation.py  test_slic.cpp  warmup_node.cpp
